@@ -51,7 +51,7 @@ $bg-color: #ffffff;
 $main-title_font: 'Faster One';
 $main-title_size: 40;
 $second-title_font: 'Audiowide';
-$second-title_size: 3vw;
+$second-title_size: 30;
 $nav-text_font: 'Jockey One';
 $nav-text_size: 25;
 $nav-text-subtitle_size: 20;
