@@ -11943,15 +11943,6 @@ input:checked + .slider:before {
   font-size: 20px;
 }
 
-.collapse-mobile {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  height: 100vh;
-}
-
 .btn-outline-success {
   border-color: #ff0000;
   color: #ff0000;
@@ -11984,10 +11975,10 @@ and for the title of other pages */
 h2, .h2 {
   text-align: left;
   font-family: "Audiowide";
-  font-size: 3vw;
+  font-size: 30;
   color: #000000;
   text-decoration: underline;
-  text-decoration-thickness: 0.5vw;
+  text-decoration-thickness: 5px;
   text-decoration-color: #ff0000;
   text-underline-offset: 7px;
 }
@@ -12034,6 +12025,18 @@ h5, .h5 {
 .card-zoom:hover {
   transform: scale(1.2);
   transition-duration: 0.5s;
+}
+
+.shopping-cart-button {
+  border-radius: 20px;
+  border-color: #ff0000;
+  border-width: 5px;
+}
+.shopping-cart-button:hover {
+  background-color: #ff0000;
+}
+.shopping-cart-button:hover .shopping-cart-icon {
+  filter: invert(1);
 }
 
 /*# sourceMappingURL=style.css.map */
