@@ -2,19 +2,19 @@
 <html lang="it">
     <head>
         <title>Concessionario Laghi</title>
-        <link rel="stylesheet" type="text/css" href="../css/structure.css">
+        <link rel="stylesheet" type="text/css" href="../../css/structure.css">
     </head>
     <body>
-      <!-- NAVBAR PER TELEFONO -->
+      <!-- NAVBAR PER SMARTPHONE -->
       <div id="accordionMenus">
-        <div class="collapse collapse-mobile" id="menuHamburgher" data-bs-theme="light" data-bs-parent="#accordionMenus">
+        <div class="collapse navbar-collapse collapse-mobile" id="menuHamburger" data-bs-theme="light" data-bs-parent="#accordionMenus">
           <div class="bg-light p-4">
             <h4><a class="nav-link-mobile" href="shopping-cart.html">Vai al carrello</a></h4>
             <h4><a class="nav-link-mobile" href="wish-list.html">Lista dei desideri</a></h4>
             <h4><a class="nav-link-mobile" href="purchase-list.html">Lista degli acquisti</a></h4>
           </div>
         </div>
-        <div class="collapse collapse-mobile" id="menuProfile" data-bs-theme="light" data-bs-parent="#accordionMenus">
+        <div class="collapse navbar-collapse collapse-mobile" id="menuProfile" data-bs-theme="light" data-bs-parent="#accordionMenus">
           <div class="bg-light p-4">
             <h4><a class="nav-link-mobile" href="profile.html">Il tuo profilo</a></h4>
             <h4><a class="nav-link-mobile" href="login.html">Accedi / Logout</a></h4>
@@ -26,19 +26,19 @@
             <div class="container-fluid d-flex justify-content-between align-items-center">
               <!-- Home icon -->
               <a href="index.html" class="navbar-brand m-0 p-0">
-                <img src="../img/static/home.svg" alt="Home" class="nav-icon-mobile">
+                <img src="../../img/static/home.svg" alt="Home" class="nav-icon-mobile">
               </a>
               <!-- Profile icon -->
-              <a href="profile.html" class="navbar-brand m-0 p-0" data-bs-toggle="collapse" data-bs-target="#menuProfile" aria-controls="#menuProfile" aria-expanded="false" aria-label="Toogle navigation">
-                <img src="../img/static/profile.svg" alt="Home" class="nav-icon-mobile">
+              <a href="#" class="navbar-brand m-0 p-0" data-bs-toggle="collapse" data-bs-target="#menuProfile" aria-controls="#menuProfile" aria-expanded="false" aria-label="Toogle navigation">
+                <img src="../../img/static/profile.svg" alt="Home" class="nav-icon-mobile">
               </a>
               <!-- Hamburger with the site links-->
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuHamburgher" aria-controls="#menuHamburgher" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuHamburger" aria-controls="#menuHamburger" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <!-- Search - car configurator -->
               <a href="car-configurator.html" class="navbar-brand m-0 p-0">
-                <img src="../img/static/search.svg" alt="Home" class="nav-icon-mobile">
+                <img src="../../img/static/search.svg" alt="Home" class="nav-icon-mobile">
               </a>
               <!-- Dark/Light switch -->
               <label class="switch mb-0">
@@ -48,7 +48,7 @@
             </div>
           </nav>
 
-        <!-- NAVBAR PER COMPUTER E TABLET -->
+        <!-- NAVBAR FOR PC -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-md-block">
           <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,7 +76,7 @@
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item dropdown">
                     <button class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img src="../img/static/profile.svg" class="nav-icon-desktop">
+                      <img src="../../img/static/profile.svg" class="nav-icon-desktop">
                     </button>
                     <ul class="dropdown-menu dropdown-menu-light">
                       <li><a class="dropdown-item nav-link-desktop-sub" href="profile.html">Vedi Profilo</a></li>
@@ -87,13 +87,13 @@
                 </ul>
               </div>
               <div class="nav-item-right-desktop">
-                <img src="../img/static/light.svg" class="nav-icon-desktop">
+                <img src="../../img/static/light.svg" class="nav-icon-desktop">
                 <!-- Dark/Light switch -->
                 <label class="switch mb-0">
                   <input type="checkbox">
                   <span class="slider round"></span>
                 </label>
-                <img src="../img/static/dark.svg" class="nav-icon-desktop">
+                <img src="../../img/static/dark.svg" class="nav-icon-desktop">
               </div>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -109,31 +109,31 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide car-carousel" data-bs-ride="carousel" data-bs-interval="3000">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/static/car1.jpg" class="d-block w-100" alt="...">
+              <img src="../../img/static/car1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../img/static/car2.jfif" class="d-block w-100" alt="...">
+              <img src="../../img/static/car2.jfif" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../img/static/car3.jpg" class="d-block w-100" alt="...">
+              <img src="../../img/static/car3.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../img/static/car4.jfif" class="d-block w-100" alt="...">
+              <img src="../../img/static/car4.jfif" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../img/static/car5.jpg" class="d-block w-100" alt="...">
+              <img src="../../img/static/car5.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
         </div>
       </div>
 
       <br><br>
-      <!-- SEZIONE AUTO PIÙ VENDUTE -->
+      <!-- MOST SOLD CARS  -->
       <div class="home-section">
         <h2>Le più vendute</h2>
         <br>
         <div class="card card-zoom" style="width: 18rem;">
-          <img src="../img/variable/fiat-panda.jfif" class="card-img-top" alt="...">
+          <img src="../../img/variable/fiat-panda.jfif" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Fiat Panda</h5>
             <p class="card-text">
@@ -145,14 +145,19 @@
               </ul>
             </p>
             <p class="price">€12.000,00</p>
-            <a href="#" class="btn btn-secondary btn-card-details">Dettagli</a>
+            <div class="d-flex align-items-center justify-content-end gap-2">
+              <a href="../posts/fiat-panda.html" class="btn btn-secondary btn-card-details">Dettagli</a>
+              <button type="button" class="shopping-cart-button">
+                <img src="../../img/static/shopping-cart.svg" class="shopping-cart-icon">
+              </button>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Aggiunta file .css -->
-      <link rel="stylesheet" type="text/css" href="../css/style.css">
-      <!-- Aggiunta script js -->
-      <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+      <!-- Add .css style files -->
+      <link rel="stylesheet" type="text/css" href="../../css/style.css">
+      <!-- Add js scripts -->
+      <script src="../../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
