@@ -7,4 +7,6 @@ DATE		HOUR	AUTHOR			DESCRIPTION
 25/04/2025	17:55	Daniele Chiarion	Completed navbar for mobile device. Possible graphic effects and icon could be added later. 
 26/04/2025	10:59 	Daniele Chiarion	Completed navbar for desktop PC. Possible icons could be added later. 
 26/04/2025	15:04	Daniele Chiarion	Completed carousel for home Page. Logos and subtitle could be added later. 
-26/04/2025	15:30 	Daniele Chiarion	Started home sections. Add card to complete;
+26/04/2025	15:30 	Daniele Chiarion	Started home sections. Add card to complete.
+27/04/2025	11:00	Daniele Chiarion	Correct navbar z-index parameter in order to display the collapse menu over the page.
+27/04/2025	11:19	Daniele Chiarion	Completed card design and object for cars.
